--- a/app/assets/components/elements/markdown-content.html
+++ b/app/assets/components/elements/markdown-content.html
@@ -7,12 +7,12 @@
       :host{
         width: 100%;
         height: 100%;
-        padding: 0px;
+        padding: 0;
         display:inline;
       }
       p{
-        margin:0px;
-        padding:0px;
+        margin:0;
+        padding:0;
 
       }
     </style>
@@ -24,8 +24,8 @@
       markdown: '',
       markdownChanged:function(){
         this.$.renderedContent.innerHTML=  marked(this.markdown); // parse markdown
-        target = this.shadowRoot.getElementById("renderedContent")
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, target]);
+        target = this.shadowRoot.getElementById("renderedContent");
+        MathJax.Hub.Queue(["Typeset", MathJax.Hub, this.$.renderedContent ]);
       }
     })
   </script>
