Various tweaks and style fixes to markdown

--- a/app/assets/components/ui-elements/oj-annotation-list.html
+++ b/app/assets/components/ui-elements/oj-annotation-list.html
@@ -13,6 +13,7 @@
         <oj-new-annotation style="top:{{newAnnotationLocation | topForAnnotation}}px"
                            location={{newAnnotationLocation}}
                            paper={{paper}}
+                           text={{newText}}
                            on-annotation-opened={{annotationOpened}}
                 > </oj-new-annotation>
       </template>
