--- a/app/assets/components/elements/markdown-content.html
+++ b/app/assets/components/elements/markdown-content.html
@@ -8,14 +8,19 @@
         width: 100%;
         height: 100%;
         padding: 0;
+        margin: 0;
         display:inline;
+      }
+      #renderedContent {
+        padding: 4px;
+          min-height: 40px;
       }
       p {
         margin:0;
         padding:0;
-
       }
     </style>
+
   </template>
 
   <script>
@@ -24,10 +29,10 @@
       markdown: '',
       markdownChanged:function(){
         var parsed = marked(this.markdown);
-        console.log('parsed = ', parsed);
         this.$.renderedContent.innerHTML =parsed;
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, this.$.renderedContent ]);
       }
     })
   </script>
-</polymer>
+
+</polymer-element>
