--- a/app/assets/components/elements/markdown-text-area.html
+++ b/app/assets/components/elements/markdown-text-area.html
@@ -2,65 +2,78 @@
 
   <template>
     <div id='content_wrapper'>
+
       <template if={{previewVisible}}>
-
-          <markdown-content markdown="{{value}}"></markdown-content>
+          <markdown-content markdown={{value}}></markdown-content>
           <a href='#' on-click="{{hidePreview}}">Show content</a>
-
       </template>
 
-
-      <template if={{!previewVisible}}>
-        <textarea class='niceTextArea' placeholder={{placeholder}} id="input" value="{{value}}"></textarea>
+      <div hidden?={{previewVisible}}>
+        <paper-autogrow-textarea id=autogrow rows=3 maxRows=12>
+          <textarea class='niceTextArea' placeholder={{placeholder}} id=input value={{value}}></textarea>
+        </paper-autogrow-textarea>
         <a href='#' on-click="{{showPreview}}">Show preview</a>
-      </template>
+      </div>
+
     </div>
 
     <style>
-      textarea{
-        resize: none;
-        height: 100%;
-        min-height:130px;
-        width: 100%;
-        padding: 8px;
-        border: 1px solid #cccccc;
-        line-height: 130%;
-        font-size: 13px;
-        z-index:0;
-        position:relative;
-      }
-      markdown-content{
-        width: 100%;
-        height: 100%;
-        padding:0;
-        color: black;
-      }
       #content_wrapper{
-        width:100%;
-        height: 100%;
-        background-color: white;
+          width:100%;
+          box-sizing: border-box;
+          position: relative;
+          color: black;
+          background-color: #e0e0e0;
+      }
+      paper-autogrow-textarea {
+          position:relative;
+          box-sizing: border-box;
+          width: 100%;
+      }
+      textarea#input {
+          resize: none;
+          box-sizing: border-box;
+          width: 100%;
+          padding: 2px;
+          border: 1px solid #cccccc;
+          font-size: 13px;
+      }
+      markdown-content {
+        width:   100%;
+        height:  100%;
+        margin:  0;
+        padding: 0;
       }
       a {
-        color:black;
+        position:absolute;
+        top: 0;
+        right: 0;
+        padding: 2px 3px;
+        color: white;
+        background-color: blue;;
+        text-decoration: none;
         z-index:1;
-        float: right;
-        margin-top: -20px;
-        position:relative;
       }
     </style>
+
   </template>
 
   <script>
     Polymer({
       previewVisible:false,
+      domReady: function() {
+        this.$.autogrow.update( this.$.input );
+      },
       showPreview: function(event){
         event.preventDefault();
-        this.previewVisible = true
+        this.previewVisible = true;
       },
       hidePreview: function(event){
         event.preventDefault();
-        this.previewVisible = false
+        this.previewVisible = false;
+        this.async(  function() { this.$.autogrow.update( this.$.input ); } );
       }
     })
   </script>
-</polymer>
+
+</polymer-element>
