--- a/app/assets/components/oj-global-expressions.html
+++ b/app/assets/components/oj-global-expressions.html
@@ -15,7 +15,7 @@
     PolymerExpressions.prototype.log = function(value, args) {
         args = Array.prototype.slice.call(arguments, 1);
         args.splice(1, 0, value);
-        console.log.apply(console, args);
+        console.info.apply(console, args);
         return value;
     };
 
