Move markdown ui elements into ui-elements folder

--- a/app/assets/components/ui-elements/all.html
+++ b/app/assets/components/ui-elements/all.html
@@ -1,5 +1,7 @@
 <!--
  *= require ./stacked-pdf-page
+ *= require ./markdown-content
+ *= require ./markdown-text-area
 
  *= require ./oj-new-annotation
  *= require ./oj-annotation
