--- a/app/assets/components/ui-elements/markdown-content.html
+++ b/app/assets/components/ui-elements/markdown-content.html
@@ -12,8 +12,7 @@
         display:inline;
       }
       #renderedContent {
-        padding: 4px;
-          min-height: 40px;
+        padding: 0;
       }
       p {
         margin:0;
