--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -96,6 +96,19 @@
           padding: 10px 0 10px 10px;
       }
 
+      markdown-text-area {
+          width: 100%;
+      }
+      markdown-text-area::shadow a.toggle {
+          bottom: -28px;
+          right:  88px;
+          color:  #eee;
+      }
+      markdown-text-area::shadow markdown-content::shadow  #renderedContent {
+          padding: 4px;
+          min-height: 40px
+      }
+
       oj-reviewer-annotation-controls {
           position: absolute;
           top:      0;
