--- a/app/assets/components/ui-elements/oj-new-annotation.html
+++ b/app/assets/components/ui-elements/oj-new-annotation.html
@@ -22,8 +22,17 @@
       left:0;
     }
 
-    markdown-text-area{
+    markdown-text-area {
       width: 100%;
+    }
+    markdown-text-area::shadow a.toggle {
+        bottom: -28px;
+        right:  88px;
+        color:  #eee;
+    }
+    markdown-text-area::shadow markdown-content::shadow  #renderedContent {
+        padding: 4px;
+        min-height: 40px
     }
 
     .controls{
