--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -38,7 +38,7 @@
               <core-a11y-keys keys="esc" on-keys-pressed={{dismissNewComment}}></core-a11y-keys>
               <core-a11y-keys keys="shift+enter" on-keys-pressed={{submitComment}}></core-a11y-keys>
 
-              <markdown-text-area placeholder="Add an issue" value="{{text}}"></markdown-text-area>
+              <markdown-text-area id=replyTextArea placeholder="Add an issue" value="{{text}}"></markdown-text-area>
 
               <div layout horizontal end-justified class='controls'>
                   <paper-icon-button disabled?={{!text}} on-click={{submitComment}}  icon="add"></paper-icon-button>
@@ -189,14 +189,14 @@
         this.fire('annotation-opened', this);
       },
       dismissNewComment:function(){
-        this.newCommentVisible = false
+        this.newCommentVisible = false;
       },
       showNewComment:function(){
-        this.newCommentVisible = true
-      },
-      afterCommentVisible: function() {
-          var edit = this.$.container.querySelector('#replyTextArea');
-          edit.focus();
+        this.newCommentVisible = true;
+        this.async( function() {
+            var edit = this.$.collapsible.querySelector('#replyTextArea');
+            edit.focus();
+        });
       },
       submitComment:function(){
         if (!this.text)
