Sort issues by position and make sure that they do not overlap. Add a bottom border so expanded issues are easier to distinguish.

--- a/app/assets/components/ui-elements/markdown-text-area.html
+++ b/app/assets/components/ui-elements/markdown-text-area.html
@@ -78,6 +78,11 @@
           var textarea = this.shadowRoot.querySelector('#input');
           if (textarea)
               textarea.focus();
+      },
+      select: function() {
+          var textarea = this.shadowRoot.querySelector('#input');
+          if (textarea)
+              textarea.select();
       }
     })
   </script>
