Fix Firefox page load error

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -1,4 +1,4 @@
-<polymer-element name="oj-review-page" attributes='paper_id user attributes'>
+<polymer-element name="oj-review-page" attributes='paper_id user'>
   <template>
 
     <core-toolbar fixed layout>
