--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -17,7 +17,7 @@
 
     <style>
       paper-shadow{
-        width: 90%;
+        width: 100%;
       }
       core-list{
         width: 100%
@@ -25,7 +25,7 @@
         min-height: 800px;
       }
       .item {
-        border-bottom: 1px grey solid;
+        border-bottom: 1px #efefef solid;
         box-sizing: border-box;
         padding:    0 0 0 20px;
       }
