--- a/app/assets/components/subpages/oj-papers-page.html
+++ b/app/assets/components/subpages/oj-papers-page.html
@@ -1,17 +1,18 @@
 <polymer-element name='oj-papers-page' attributes='user'>
   <template>
+    <section layout vertical class="boiler-plate">
+      <h1>Your submissions</h1>
+      <oj-paper-collection  src='/papers'></oj-paper-collection>
+    </section>
 
+    <link rel="stylesheet" href="../../stylesheets/customized-components.css.scss" />
 
-    <h2>Your submissions</h2>
-    <oj-paper-collection  src='/papers'></oj-paper-collection>
-
-  <style>
-    paper-tabs{
-      background: #7986CB;
-      color: white;
-    }
-  </style>
-
+    <style>
+      paper-tabs{
+        background: #7986CB;
+        color: white;
+      }
+    </style>
   </template>
   <script>
     Polymer({})
